--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,11 @@
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.19.1</version>
       </plugin>
+	    <plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jxr-plugin</artifactId>
+                    <version>2.3</version>
+            </plugin>
     </plugins>
   </reporting>
   
